--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.4.1",
     "cool-ascii-faces": "^1.3.4",
+    "dotenv": "^8.0.0",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
